--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.433.0",
     "@aws-sdk/s3-request-presigner": "^3.433.0",
+    "@aws-sdk/util-utf8-node": "^3.259.0",
     "axios": "^1.5.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
